One to One relation is working but not how I want. requires way too much data to create an account

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.application.name=javaBank
 
+# outsource to hibernate config since this throws a warning or error even if its correct
 # define postgresSQL as Hibernate dialect - ignore terminal warnings -  they lie
 # spring.jpa.database=postgresql
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # database config
-spring.datasource.url=jdbc:postgresql://localhost:5432/javaBank
+spring.datasource.url=jdbc:postgresql://localhost:32768/javaBank
 spring.datasource.username=postgres
 spring.datasource.password=root
 
